update: add landing page setup for wallet auth

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,6 +1,6 @@
 .App {
   height: 100vh;
-  background-color: rgb(20, 20, 20);
+  background-color: #243447;
   overflow: scroll;
   text-align: center;
   overflow: hidden;
@@ -59,7 +59,7 @@
 
 .connect-wallet-button {
   color: white;
-  background: -webkit-linear-gradient(left, #ff8867, #ff52ff);
+  background: -webkit-linear-gradient(left, #ee0979, #ff6a00);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
 }
